# spatial-grouping-attention

./: .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  Makefile  README.md  TEMPLATE_README.md  pyproject.toml  setup_template.py
.github/workflows/: ci-cd.yml
.pre-commit-hooks/: README.md  update-version.py
docs/: README.md
src/spatial_attention/: __init__.py  core.py  mlp.py  spatial_attention.py  utils.py
src/spatial_grouping_attention/: __init__.py  mlp.py  spatial_grouping_attention.py  utils.py
src/{{package_name}}/: __init__.py  core.py
tests/: README.md  __init__.py  conftest.py  test_integration.py  test_mlp.py  test_spatial_attention.py  test_utils.py  test_{{package_name}}.py
